# spooner

./: .gitignore  LICENSE  PRD.md  README.md  azure-pipelines.yml  notify.py  pkg_resources.py  pyproject.toml  requirements.in  requirements.txt  setup.py  spooner.py  tox.ini
docs/: webgl_background.md  word_frequency_plan.md
docs/source/: conf.py  index.rst
docs/source/_static/: tool-docs.css
spooner/: __init__.py  frequency.py  spooner.py  webapp.py
spooner_env/: pyvenv.cfg
spooner_env/Scripts/: activate  activate.bat
static/: app.js  styles.css
templates/: index.html
tests/: __init__.py  test_spooner.py
