[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spooner"
author = "Danny McVey"
author-email = ""
description-file = "README.md"
home-page = "https://github.com/danmaps/spooner"
classifiers = ["License :: OSI Approved :: MIT License"]
requires=["pronouncing", "setuptools", "flask"]

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox"]
